# amalfi-reproduce

./: .gitignore  README.md  calc.py  generate_malicious_csv.py  main.py  predict.py  pyproject.toml  run.sh  run_p0_eval.sh  standard_pipeline.py
code/clone-detector/: hash_package.py
code/training/: feature_extractor.py  predict.py  train_classifier.py  util.py
features/: 10k_2k.csv  10k_8k_2k.csv  10k_8k_6k.csv  backstabber.csv  backstabber_deduplicate.csv  datadog.csv  maloss.csv  maloss_deduplicate.csv  new.csv  train.csv  train_deduplicate.csv  true_value.csv
tests/: test_feature_extractor.py  test_generate_malicious_csv.py  test_pipeline_guards.py  test_standard_pipeline.py
