[project]
name = "amalfi-reproduce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.21",
    "imblearn>=0.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tqdm==4.67.1",
    "tree-sitter==0.23.1",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-python==0.23.6",
    "tree-sitter-typescript==0.23.2",
]
